--- a/foes.html
+++ b/foes.html
@@ -30,8 +30,30 @@
             <p>A little is fine, a lot is not!</p>
         </div>
         <main>
-        
+<div class="flow">
+                <section>
+                    <div id="cookiefoes"></div>
+                </section>
+                <section>
+                    <h3>This is Cookie!</h3>
+                    <p>
+                        Don't eat too many processed desserts! <br>
 
+                    </p>
+                </section>
+            </div>
+            <div class="flow">
+                <section>
+                    <div id="candy"></div>
+                </section>
+                <section>
+                    <h3>This is Candy!</h3>
+                    <p>
+                        Too many sweets can hurt your teeth! <br>
+                    </p>
+                </section>
+            </div>
+        </main>
         <footer>
             <i>
                 <small>Copyright &copy; 2025 Super Friends<br>
