--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
             <p>Super Friends are nutrient-rich! They lift your mood, spirits, and energy!</p>
         </div>
         <main>
-
-            <div class="flow">
+            <div class="flow_front">
                 <section>
                     <div id="bbhero">
                     </div>
-                    <h4><a href="fruits.html">Meet our fruits and their berry benefits!</a></h4>
+                    <h4><a href="fruits.html">Meet the Berry friends!</a></h4>
                 </section>
                 <section>
                     <div id="brochero">
@@ -53,6 +52,41 @@
                     <h4><a href="foes.html">Beware of Food Foes!</a></h4>
                 </section>
             </div>
+            <h3>Check the table below to see the recommended serving sizes based on your age group!</h3>
+
+            <table>
+                <tr>
+                    <th>Age Groups</th>
+                    <th>Fruits</th>
+                    <th>Vegetables</th>
+                    <th>Proteins</th>
+                </tr>
+                <tr>
+                    <td>12-23 months</td>
+                    <td>&frac12; to 1 cup</td>
+                    <td>&frac23; to 1 cup</td>
+                    <td>2 oz-equiv</td>
+                </tr>
+                <tr>
+                    <td>2-8 years old</td>
+                    <td>1 to 2 cup</td>
+                    <td>1 to 2 &frac12; cups</td>
+                    <td>2 to 5 &frac12; oz-equiv</td>
+                </tr>
+                <tr>
+                    <td>9-13 years old</td>
+                    <td>1 &frac12; to 2 cups</td>
+                    <td>1 &frac12; to 2 &frac12; cups</td>
+                    <td>4 to 6 &frac12; oz-equiv</td>
+                </tr>
+                <tr>
+                    <td>14-18 years old</td>
+                    <td>1 &frac12; to 2 cups</td>
+                    <td>2 &frac12; to 4 &frac12; cups</td>
+                    <td>5 to 7 oz-equiv</td>
+                </tr>
+            </table>
+
         </main>
 
         <footer>
