--- a/veges.html
+++ b/veges.html
@@ -27,12 +27,36 @@
         </div>
         <div id="h2">
             <h2>Meet these Vital Veggies!</h2>
-            <p>A balanced diet of tasty and healthy foods fuel your body and brain! Don't forget to balance the amount
-                of processed foods you eat too!</p>
+            <p>Be fit and fast with Vital Veggies!</p>
         </div>
         <main>
-        
-
+        <div class="flow">
+                <section>
+                    <div id="brocveges"></div>
+                </section>
+                <section>
+                    <h3>Meet Broc the Broccoli!</h3>
+                    <p>
+                        Broc will help you stay strong! <br>
+                        Broccoli boosts immunity to keep you healthy! It's a great
+                        source of fiber and protein! 
+                    </p>
+                </section>
+            </div>
+            <div class="flow">
+                <section>
+                    <div id="kyle"></div>
+                </section>
+                <section>
+                    <h3>Meet Kyle the Kale!</h3>
+                    <p>
+                        Leafy greens like Kyle are just as important! <br>
+                        Kale has calcium and iron to keep your bones strong, vitamin
+                        C to help your immunity fight infections, and has fiber to keep
+                        your gut healthy!
+                    </p>
+                </section>
+            </div>
         <footer>
             <i>
                 <small>Copyright &copy; 2025 Super Friends<br>
