--- a/fruits.html
+++ b/fruits.html
@@ -23,16 +23,60 @@
             </ul>
         </nav>
 
-        <div id="homehero" class="hero">
+        <div id="fruitshero" class="hero">
         </div>
         <div id="h2">
             <h2>Meet your new Fruity Friends!</h2>
-            <p>A balanced diet of tasty and healthy foods fuel your body and brain! Don't forget to balance the amount
-                of processed foods you eat too!</p>
+            <p> These berries are lower in sugar and calories compared to other fruits! 
+                They are good for your heart, brain and digestion. <br>
+                Enjoy them as a healthy sweet snack or in your cereal, yogurt, 
+                smoothies and even salads!</p>
         </div>
         <main>
-        
-
+             <div class="flow">
+                <section>
+                    <div id="sweetie"></div>
+                </section>
+                <section>
+                    <h3>Meet Sweetie the Strawberry!</h3>
+                    <p>
+                        Sweetie is bursting with vitamin C! <br>
+                        Strawberries are known as the beauty fruit, 
+                        good for your skin and full of vitamin C, 
+                        lowering chance of getting sick. 
+                    </p>
+                </section>
+            </div>
+            <div class="flow">
+                <section>
+                    <div id="bbfruits"></div>
+                </section>
+                <section>
+                    <h3>Meet BB the Blueberry!</h3>
+                    <p>
+                        Boost your brain power with BB! <br>
+                        Blueberries are one of the healthiest fruits,
+                        boosting heart health and brain function.
+                        They are full of antioxidants, which protects your 
+                        cells from being damaged, guarding from aging and 
+                        diseases such as cancer!
+                    </p>
+                </section>
+            </div>
+            <div class="flow">
+                <section>
+                    <div id="ruby"></div>
+                </section>
+                <section>
+                    <h3>Meet Ruby the Raspberry!</h3>
+                    <p>
+                        Ruby is a funny and spunky fruit friend that's full of life! <br>
+                        Raspberries are full of fiber and keep you youthful! 
+                    
+                    </p>
+                </section>
+            </div>
+        </main>
         <footer>
             <i>
                 <small>Copyright &copy; 2025 Super Friends<br>
