--- a/foes.html
+++ b/foes.html
@@ -32,18 +32,19 @@
         <main>
 <div class="flow">
                 <section>
+                    <h6 class="h6">Cookie</h6>
                     <div id="cookiefoes"></div>
                 </section>
                 <section>
                     <h3>This is Cookie!</h3>
                     <p>
                         Don't eat too many processed desserts! <br>
-
                     </p>
                 </section>
             </div>
             <div class="flow">
                 <section>
+                    <h6 class="h6">Candy</h6>
                     <div id="candy"></div>
                 </section>
                 <section>
