--- a/fruits.html
+++ b/fruits.html
@@ -27,28 +27,30 @@
         </div>
         <div id="h2">
             <h2>Meet your new Fruity Friends!</h2>
-            <p> These berries are lower in sugar and calories compared to other fruits! 
+            <p> These berries are lower in sugar and calories compared to other fruits!
                 They are good for your heart, brain and digestion. <br>
-                Enjoy them as a healthy sweet snack or in your cereal, yogurt, 
+                Enjoy them as a healthy sweet snack or in your cereal, yogurt,
                 smoothies and even salads!</p>
         </div>
         <main>
-             <div class="flow">
-                <section>
-                    <div id="sweetie"></div>
-                </section>
+            <div class="flow">
+                    <section>
+                        <h6 class="h6">Sweetie</h6>
+                        <div id="sweetie"></div>
+                    </section>
                 <section>
                     <h3>Meet Sweetie the Strawberry!</h3>
                     <p>
                         Sweetie is bursting with vitamin C! <br>
-                        Strawberries are known as the beauty fruit, 
-                        good for your skin and full of vitamin C, 
-                        lowering chance of getting sick. 
+                        Strawberries are known as the beauty fruit,
+                        good for your skin and full of vitamin C,
+                        lowering chance of getting sick.
                     </p>
                 </section>
             </div>
             <div class="flow">
                 <section>
+                    <h6 class="h6">BB</h6>
                     <div id="bbfruits"></div>
                 </section>
                 <section>
@@ -57,22 +59,23 @@
                         Boost your brain power with BB! <br>
                         Blueberries are one of the healthiest fruits,
                         boosting heart health and brain function.
-                        They are full of antioxidants, which protects your 
-                        cells from being damaged, guarding from aging and 
+                        They are full of antioxidants, which protects your
+                        cells from being damaged, guarding from aging and
                         diseases such as cancer!
                     </p>
                 </section>
             </div>
             <div class="flow">
                 <section>
+                    <h6 class="h6">Ruby</h6>
                     <div id="ruby"></div>
                 </section>
                 <section>
                     <h3>Meet Ruby the Raspberry!</h3>
                     <p>
                         Ruby is a funny and spunky fruit friend that's full of life! <br>
-                        Raspberries are full of fiber and keep you youthful! 
-                    
+                        Raspberries are full of fiber and keep you youthful!
+
                     </p>
                 </section>
             </div>
