--- a/veges.html
+++ b/veges.html
@@ -30,8 +30,9 @@
             <p>Be fit and fast with Vital Veggies!</p>
         </div>
         <main>
-        <div class="flow">
+            <div class="flow">
                 <section>
+                    <h6 class="h6">Broc</h6>
                     <div id="brocveges"></div>
                 </section>
                 <section>
@@ -39,12 +40,13 @@
                     <p>
                         Broc will help you stay strong! <br>
                         Broccoli boosts immunity to keep you healthy! It's a great
-                        source of fiber and protein! 
+                        source of fiber and protein!
                     </p>
                 </section>
             </div>
             <div class="flow">
                 <section>
+                    <h6 class="h6">Kyle</h6>
                     <div id="kyle"></div>
                 </section>
                 <section>
@@ -57,6 +59,7 @@
                     </p>
                 </section>
             </div>
+        </main>
         <footer>
             <i>
                 <small>Copyright &copy; 2025 Super Friends<br>
