--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Super Friends' Simple Nutrition</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn quick and simple nutrition facts with Super Friends characters.
+    This home page leads to informational pages about the fruit, vegetable, and protein food groups.">
     <link rel="stylesheet" href="super.css">
 </head>
 
@@ -34,25 +36,45 @@
                 <section>
                     <div id="bbhero">
                     </div>
-                    <h4><a href="fruits.html">Meet the Berry friends!</a></h4>
+                    <h6 class="h6">Meet the Berry friends!</h6>
                 </section>
                 <section>
                     <div id="brochero">
                     </div>
-                    <h4><a href="veges.html">Meet the vital veggies!</a></h4>
+                    <h6 class="h6">Meet the vital veggies!</h6>
                 </section>
                 <section>
                     <div id="sammyhero">
                     </div>
-                    <h4><a href="proteins.html">Meet the powerful proteins!</a></h4>
+                    <h6 class="h6">Meet the powerful proteins!</h6>
                 </section>
                 <section>
                     <div id="cookiehero">
                     </div>
+                    <h6 class="h6">Beware of Food Foes!</h6>
+                </section>
+            </div>
+
+            <div class="flow_front">
+                <section>
+                    <h4><a href="fruits.html">Meet the Berry friends!</a></h4>
+                </section>
+                <section>
+                    <h4><a href="veges.html">Meet the vital veggies!</a></h4>
+                </section>
+                <section>
+                    <h4><a href="proteins.html">Meet the powerful proteins!</a></h4>
+                </section>
+                <section>
                     <h4><a href="foes.html">Beware of Food Foes!</a></h4>
                 </section>
             </div>
-            <h3>Check the table below to see the recommended serving sizes based on your age group!</h3>
+
+            <br>
+
+            <h3>Check the table below to see the recommended serving sizes based on your age group!
+                Click <a target="_blank" href="https://www.myplate.gov/life-stages">here</a> for more info!
+            </h3>
 
             <table>
                 <tr>
@@ -86,6 +108,21 @@
                     <td>5 to 7 oz-equiv</td>
                 </tr>
             </table>
+
+            <h3>Reach out to us below for more Super Friends updates!
+            </h3>
+
+            <form method="post" action="#">
+                <label for="myName">*First Name:</label>
+                <input type="text" name="myName" id="myName" required>
+                <label for="myEmail">*E-mail:</label>
+                <input type="email" name="myEmail" id="myEmail" required>
+                <label for="mySubject">Subject:</label>
+                <input type="text" name="mySubject" id="mySubject">
+                <label for="myComments">*Comments:</label>
+                <textarea name="myComments" id="myComments" rows="2" cols="30" required></textarea>
+                <input type="submit" value="Submit">
+            </form>
 
         </main>
 
