--- a/foes.html
+++ b/foes.html
@@ -5,6 +5,8 @@
     <title>Super Friends: Food Foes</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn why you should moderate saturated fats 
+    and artificial sugars in your diet with the Food Foes' Cookie and Candy.">
     <link rel="stylesheet" href="super.css">
 </head>
 
@@ -23,14 +25,14 @@
             </ul>
         </nav>
 
-        <div id="homehero" class="hero">
+        <div id="foeshero" class="hero">
         </div>
         <div id="h2">
             <h2>Beware of Food Foes!</h2>
             <p>A little is fine, a lot is not!</p>
         </div>
         <main>
-<div class="flow">
+            <div class="flow">
                 <section>
                     <h6 class="h6">Cookie</h6>
                     <div id="cookiefoes"></div>
@@ -38,7 +40,11 @@
                 <section>
                     <h3>This is Cookie!</h3>
                     <p>
-                        Don't eat too many processed desserts! <br>
+                        Don't eat too many processed desserts! <br><br>
+                        Desserts like cookies and cakes contain a lot of unhealtly saturated fats!
+                        Eating too much can raises cholesterol, affecting you heart health.
+                        This can also lead to weight gain, which affects digestion and energy. <br><br>
+                        Avoid or limit eating fried foods, baked desserts, and overly cheesy foods!
                     </p>
                 </section>
             </div>
@@ -50,10 +56,19 @@
                 <section>
                     <h3>This is Candy!</h3>
                     <p>
-                        Too many sweets can hurt your teeth! <br>
+                        Too many sweets can hurt your teeth! <br><br>
+                        Unlike fruits, candies have added sugars which are often unnatural!
+                        Eating too many sweets can affect your mood, harm your heart, cause diabetes,
+                        and damage your teeth! <br><br>
+                        Avoid or limit candy, soft drinks/sweetened drinks, as well as
+                        baked and dairy desserts in your diet!
                     </p>
                 </section>
             </div>
+            <br>
+            <h3>Click <a target="_blank" href="https://www.myplate.gov/eat-healthy/more-key-topics">here</a> for more
+                info on what foods
+                to avoid!</h3>
         </main>
         <footer>
             <i>
@@ -62,6 +77,7 @@
                 </small>
             </i>
         </footer>
+
     </div>
 </body>
 
