--- a/fruits.html
+++ b/fruits.html
@@ -5,6 +5,8 @@
     <title>Super Friends: Fruits</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn why and how to include fruit 
+    in your diet with simple tips guided by Super Friends' Sweetie, BB, and Ruby.">
     <link rel="stylesheet" href="super.css">
 </head>
 
@@ -34,17 +36,18 @@
         </div>
         <main>
             <div class="flow">
-                    <section>
-                        <h6 class="h6">Sweetie</h6>
-                        <div id="sweetie"></div>
-                    </section>
+                <section>
+                    <h6 class="h6">Sweetie</h6>
+                    <div id="sweetie"></div>
+                </section>
                 <section>
                     <h3>Meet Sweetie the Strawberry!</h3>
                     <p>
-                        Sweetie is bursting with vitamin C! <br>
+                        Sweetie is bursting with vitamin C! <br><br>
                         Strawberries are known as the beauty fruit,
                         good for your skin and full of vitamin C,
-                        lowering chance of getting sick.
+                        lowering chance of getting sick. <br><br>
+                        About 8 big strawberries equals 1 cup of fruit!
                     </p>
                 </section>
             </div>
@@ -56,12 +59,13 @@
                 <section>
                     <h3>Meet BB the Blueberry!</h3>
                     <p>
-                        Boost your brain power with BB! <br>
+                        Boost your brain power with BB! <br><br>
                         Blueberries are one of the healthiest fruits,
                         boosting heart health and brain function.
                         They are full of antioxidants, which protects your
                         cells from being damaged, guarding from aging and
-                        diseases such as cancer!
+                        diseases such as cancer! <br><br>
+                        Did you know &frac13; cup of dried blueberries equals 1 cup of fruit!
                     </p>
                 </section>
             </div>
@@ -73,12 +77,16 @@
                 <section>
                     <h3>Meet Ruby the Raspberry!</h3>
                     <p>
-                        Ruby is a funny and spunky fruit friend that's full of life! <br>
-                        Raspberries are full of fiber and keep you youthful!
-
+                        Ruby is a funny and spunky fruit friend that's full of life! <br><br>
+                        Raspberries are full of fiber, potassium and vitamin C, keeping you youthful.
+                        They are a bite-sized snack that helps your heart! <br><br>
+                        Raspberries are a great snack fresh or frozen!
                     </p>
                 </section>
             </div>
+            <br>
+            <h3>Click <a target="_blank" href="https://www.myplate.gov/eat-healthy/fruits">here</a> for more info on
+                fruits!</h3>
         </main>
         <footer>
             <i>
