--- a/veges.html
+++ b/veges.html
@@ -5,6 +5,8 @@
     <title>Super Friends: Vegetables</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn why and how to include vegetables 
+    in your diet with simple tips guided by Super Friends' Broc and Kyle.">
     <link rel="stylesheet" href="super.css">
 </head>
 
@@ -23,7 +25,7 @@
             </ul>
         </nav>
 
-        <div id="homehero" class="hero">
+        <div id="vegeshero" class="hero">
         </div>
         <div id="h2">
             <h2>Meet these Vital Veggies!</h2>
@@ -38,9 +40,10 @@
                 <section>
                     <h3>Meet Broc the Broccoli!</h3>
                     <p>
-                        Broc will help you stay strong! <br>
+                        Broc will help you stay strong! <br><br>
                         Broccoli boosts immunity to keep you healthy! It's a great
-                        source of fiber and protein!
+                        source of fiber and protein! <br><br>
+                        A cup of broccoli, whether fresh or frozen, counts as 1 cup of vegetables!
                     </p>
                 </section>
             </div>
@@ -52,11 +55,35 @@
                 <section>
                     <h3>Meet Kyle the Kale!</h3>
                     <p>
-                        Leafy greens like Kyle are just as important! <br>
+                        Leafy greens like Kyle are just as important! <br><br>
                         Kale has calcium and iron to keep your bones strong, vitamin
                         C to help your immunity fight infections, and has fiber to keep
-                        your gut healthy!
+                        your gut healthy! <br><br>
+                        A cup of cooked kale or two cups of fresh kale counts as 1 cup of vegetables!
                     </p>
+                </section>
+            </div>
+            <br>
+            <h3>Click <a target="_blank" href="https://www.myplate.gov/eat-healthy/vegetables">here</a> for more info on
+                vegetables!</h3>
+
+            <div class="flow_recipes">
+                <section>
+                    <h6 class="h6">Broccoli Video</h6>
+                    <video controls autoplay width="640" height="360" loop>
+                        <source src="broc_vid.mp4" type="video/mp4">
+                        <a href="broc_vid.mp4">Seasoned Broccoli</a>
+                    </video>
+                </section>
+                <section>
+                    <h3>Try these recipes!</h3>
+                    <ul>
+                        <li><a target="_blank"
+                                href="https://www.allrecipes.com/recipe/176957/baked-kale-chips/">Allrecipes' Baked Kale
+                                Chips</a></li>
+                        <li><a target="_blank" href="https://www.loveandlemons.com/roasted-broccoli/">Love & Lemons'
+                                Oven-Baked Broccoli</a></li>
+                    </ul>
                 </section>
             </div>
         </main>
