--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn quick and simple nutrition facts with Super Friends characters.
     This home page leads to informational pages about the fruit, vegetable, and protein food groups.">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZEXYZBKECS"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-ZEXYZBKECS');
+    </script>
     <link rel="stylesheet" href="super.css">
 </head>
 
