--- a/foes.html
+++ b/foes.html
@@ -7,6 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn why you should moderate saturated fats 
     and artificial sugars in your diet with the Food Foes' Cookie and Candy.">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZEXYZBKECS"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-ZEXYZBKECS');
+    </script>
     <link rel="stylesheet" href="super.css">
 </head>
 
